# Simulacion-de-sistemas

./: .gitignore  SdS_TP2_2023Q1G1_Codigo  dynamic_control_20_1_5.xyz  frame.xyz  frame_0.xyz  frame_16.xyz  frame_180.xyz  frame_19.xyz  frame_237.xyz  frame_330.xyz  frame_359.xyz  pom.xml  static_control_20_1_5.xyz
notebooks/: Resultados TP1.ipynb  TP2.ipynb  TP3.ipynb  TP4.2a.ipynb  TP4.2b.ipynb  TP4.ipynb  TP5.ipynb  Untitled.ipynb  Video Changes.ipynb  pyproject.toml
notebooks/.ipynb_checkpoints/: Resultados TP1-checkpoint.ipynb  TP2-checkpoint.ipynb  TP3-checkpoint.ipynb  TP4-checkpoint.ipynb  TP5-checkpoint.ipynb  Untitled-checkpoint.ipynb  Video Changes-checkpoint.ipynb
res/: test_velocities_0.xyz
res/grids/: dynamic_control_20_1.00_2.00.xyz  static_control_20_1.00_2.00.xyz
src/main/java/: Cell.java  DistancePair.java  Dynamic100.txt  Frame.java  GenerateGrid.java  Grid.java  Main.java  NoPeriodicGrid.java  Parser.java  Particle.java  ParticleAndDistance.java  PeriodicGrid.java  application.properties  ovito1.xyz  ovito2.xyz
tp2/: pom.xml
tp2/src/: add_lines_to_video.sh
tp2/uml/: cell.puml  grid.puml  particle.puml
tp3/: pom.xml
tp4/: diagram  pom.xml
tp4/src/animation/: OvitoWriter.java  Parser.java
tp4/src/simulation/: Particle.java  Particle5.java  ParticleDynamics.java  ParticleDynamics5.java  SpringGearModel.java  SpringModel.java
tp4/src/solvers/: BeemanSolver.java  EulerSimpleSolver.java  IntegralSolver.java  SpringGear5Solver.java  VerletOriginalSolver.java
tp4/src/table/: Ball.java  BallAndDistance.java  (+12 more)
tp5/: pom.xml  umlDiagram
(+70 files in other folders)
