[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Joaquin Suarez Bodean <jsuarezb@itba.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.0"
jupyterlab = "^3.6.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
